Fix layout shifts

--- a/src/app/layouts/admin/admin.less
+++ b/src/app/layouts/admin/admin.less
@@ -17,3 +17,15 @@ tui-block-status {
   display: flex;
   flex-direction: column;
 }
+
+tui-block-status {
+  ::ng-deep {
+    .t-block-text {
+      margin-top: 0rem !important;
+    }
+
+    .t-block-image {
+      margin-bottom: 2rem !important;
+    }
+  }
+}
