--- a/src/app/layouts/auth/auth.less
+++ b/src/app/layouts/auth/auth.less
@@ -13,3 +13,15 @@
     background: var(--tui-background-base-alt);
   }
 }
+
+tui-block-status {
+  ::ng-deep {
+    .t-block-text {
+      margin-top: 0rem !important;
+    }
+
+    .t-block-image {
+      margin-bottom: 2rem !important;
+    }
+  }
+}
